--- a/masaicalcultor.html
+++ b/masaicalcultor.html
@@ -7,7 +7,8 @@
     
     <style>
         #cont{
-            border:1px solid red;
+            
+            box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
             display: grid;
             width: 500px;
             height: 500px;
